--- a/episodios.html
+++ b/episodios.html
@@ -42,10 +42,9 @@
     <section id="episodiosList" class="episodiosList">
         <h2>Nuestros Episodios</h2>
         <ul>
-            <li><a href="#">Episodio 1: Introducción a la tecnología web</a></li>
-            <li><a href="#">Episodio 2: Cómo crear un proyecto en GitHub</a></li>
-            <li><a href="#">Episodio 3: Innovaciones en el mundo de la IA</a></li>
-            <li><a href="#">Episodio 4: El futuro de la programación web</a></li>
+            <li><a href="podcast.html">Episodio 1: Noticias tecnologicas actuales</a></li>
+            <li><a href="#">Episodio 2: PROXIMAMENTE...</a></li>
+            
         </ul>
     </section>
 
