--- a/podcast.html
+++ b/podcast.html
@@ -41,9 +41,9 @@
 
     <section id="podcastInfo" class="podcastInfo">
         <h2>Sobre nuestro Podcast</h2>
-        <p>En "Traveler" hablamos sobre proyectos innovadores, nuevos avances tecnológicos y todo lo relacionado con la informática y el futuro de la web. ¡Acompáñanos en cada episodio!</p>
+        <p>En Traveler hablamos sobre proyectos innovadores, nuevos avances tecnológicos y todo lo relacionado con la informática y el futuro de la web. ¡Acompáñanos en cada episodio!</p>
         <audio controls>
-            <source src="ruta/a/tu/audio.mp3" type="audio/mp3">
+            <source src="./audio/vlog-music-beat-trailer-showreel-promo-background-intro-theme-274290.mp3" type="audio/mp3">
             Tu navegador no soporta el formato de audio.
         </audio>
     </section>
