falta meter audio del podcast

--- a/episodios.html
+++ b/episodios.html
@@ -47,11 +47,15 @@
             
         </ul>
     </section>
+    <section id="episodiosList" class="episodiosList">
+        <h2>Producción</h2>
+        <p>Este podcast ha sido producido usando audacity como herramienta para editar el audio. La web se ha hecho con html y css</p>
+    </section>
 
     <footer>
-        <p>Siguenos en nuestras redes sociales:</p>
+        <p>Mira nuestro proyecto en github</p>
         <div class="social">
-            <a href="https://www.instagram.com/elstribunerus" target="_blank">Instagram</a>
+            <a href="https://github.com/aadam-oc/podcast" target="_blank">Github</a>
         </div>
     </footer>
 </body>
