--- a/podcast.html
+++ b/podcast.html
@@ -50,9 +50,9 @@
     
 
     <footer>
-        <p>Siguenos en nuestras redes sociales:</p>
+        <p>Mira nuestro proyecto en github</p>
         <div class="social">
-            <a href="https://www.instagram.com/elstribunerus" target="_blank">Instagram</a>
+            <a href="https://github.com/aadam-oc/podcast" target="_blank">Github</a>
         </div>
     </footer>
 </body>
