--- a/inicio.html
+++ b/inicio.html
@@ -39,13 +39,13 @@
 
     <section id="aboutUs" class="aboutUs">
         <h2>¿Quiénes somos?</h2>
-        <p>Somos un par de chavales apasionados por la informática y la tecnología. Nos gusta compartir nuestras ideas y proyectos, especialmente relacionados con el futuro de la web y la tecnología.</p>
+        <p>Somos un par de chavales apasionados por la informática y la tecnología. Nos gusta compartir noticias, nuestras ideas, y proyectos, especialmente relacionados con el futuro de la web y la tecnología.</p>
     </section>
 
     <footer>
-        <p>Siguenos en nuestras redes sociales:</p>
+        <p>Mira nuestro proyecto en github</p>
         <div class="social">
-            <a href="https://www.instagram.com/elstribunerus" target="_blank">Instagram</a>
+            <a href="https://github.com/aadam-oc/podcast" target="_blank">Github</a>
         </div>
     </footer>
 </body>
