acabado con audio

--- a/podcast.html
+++ b/podcast.html
@@ -43,7 +43,7 @@
         <h2>Sobre nuestro Podcast</h2>
         <p>En Traveler hablamos sobre proyectos innovadores, nuevos avances tecnológicos y todo lo relacionado con la informática y el futuro de la web. ¡Acompáñanos en cada episodio!</p>
         <audio controls>
-            <source src="./audio/vlog-music-beat-trailer-showreel-promo-background-intro-theme-274290.mp3" type="audio/mp3">
+            <source src="./audio/podcast.mp3" type="audio/mp3">
             Tu navegador no soporta el formato de audio.
         </audio>
     </section>
